# Snake

./: CMakeLists.txt  README.txt  Snake.cpp
inc/: Snake.h
src/: Snake.cpp
